<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_20">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_centerVertical="true"
            android:src="@mipmap/back" />

        <com.speed.domain.catlifevpn.custom.MediumText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_20">

            <com.speed.domain.catlifevpn.custom.MediumText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dp_20"
                android:text="@string/setting_Speed"
                android:textColor="@color/color_CFCFD0"
                android:textSize="@dimen/sp_12" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_speed"
                app:title="@string/setting_Speed_Test" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_location"
                app:title="@string/setting_Location" />

            <com.speed.domain.catlifevpn.custom.MediumText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:paddingHorizontal="@dimen/dp_20"
                android:text="@string/setting_information"
                android:textColor="@color/color_CFCFD0"
                android:textSize="@dimen/sp_12" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_system"
                app:title="@string/setting_System_Info" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_availability"
                app:title="@string/setting_Availability" />

            <com.speed.domain.catlifevpn.custom.MediumText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:paddingHorizontal="@dimen/dp_20"
                android:text="@string/setting"
                android:textColor="@color/color_CFCFD0"
                android:textSize="@dimen/sp_12" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_language"
                app:title="@string/setting_Language" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_version"
                app:title="@string/setting_Version_Update" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:id="@+id/rateUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_rate"
                app:title="@string/setting_Rate_us" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_mode"
                app:title="@string/setting_Switch_Mod" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_interface"
                app:title="@string/setting_Interface_style" />

            <com.speed.domain.catlifevpn.custom.MediumText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:paddingHorizontal="@dimen/dp_20"
                android:text="@string/setting_About"
                android:textColor="@color/color_CFCFD0"
                android:textSize="@dimen/sp_12" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_feedback"
                app:title="@string/setting_Feedback" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_share"
                app:title="@string/setting_Share" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_privacy"
                app:title="@string/setting_Privacy" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_about"
                app:title="@string/setting_About" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_legal"
                app:title="@string/setting_Legal" />

            <com.speed.domain.catlifevpn.custom.SettingItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@mipmap/setting_help"
                app:title="@string/setting_Help" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>