<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.ConnectResultActivity">

    <ImageView
        android:id="@+id/close"
        android:layout_width="@dimen/dp_35"
        android:layout_height="@dimen/dp_35"
        android:layout_margin="@dimen/dp_20"
        android:src="@mipmap/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.runrick.vplifecat.custom.MediumText
        android:id="@+id/connectType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/connection_successful"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/close" />

    <!--Btn Share-->
    <LinearLayout
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/btn_connect_share"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/connectType">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_30">

            <com.runrick.vplifecat.custom.MediumText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_share_title"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_28" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/btn_share_hint"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dp_15"
            android:src="@mipmap/connect_share" />

    </LinearLayout>

    <!--Btn Tg-->
    <LinearLayout
        android:id="@+id/btnTg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/btn_connect_tg"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnShare">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_30">

            <com.runrick.vplifecat.custom.MediumText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_tg_title"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_28" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/btn_tg_hint"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dp_15"
            android:src="@mipmap/connect_tg" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_80"
        android:background="@drawable/btn_gray20"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>