<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/dp_12"
    android:background="@drawable/bg_dialog20"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_18"
    android:paddingTop="@dimen/dp_10"
    android:paddingBottom="@dimen/dp_19">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.speed.domain.catlifevpn.custom.MediumText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:src="@mipmap/dialog_disconnect"
            android:text="@string/dialog_failed"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/close" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/btnSupport"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/btn_blue20"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:src="@mipmap/dialog_support" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnTg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/btn_blue20"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:src="@mipmap/dialog_tg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telegram"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <com.speed.domain.catlifevpn.custom.MediumText
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/btn_gray20"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

</LinearLayout>