<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLay"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_220"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/dp_20"
    android:background="@drawable/bg_dialog20"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/dialog_disconnect" />

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/close" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_disconnect"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_17"
        android:orientation="horizontal">

        <com.runrick.vplifecat.custom.MediumText
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_gray10"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <com.runrick.vplifecat.custom.MediumText
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_weight="1"
            android:background="@drawable/btn_blue10"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

</LinearLayout>