<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:fitsSystemWindows="true"
    tools:context=".ui.RateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_gravity="end"
            android:layout_margin="@dimen/dp_20"
            android:src="@mipmap/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.speed.domain.catlifevpn.custom.MediumText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_6"
            android:gravity="center"
            android:text="@string/rate_title"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24"
            app:layout_constraintTop_toBottomOf="@+id/close" />

        <ImageView
            android:id="@+id/imageRate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_270"
            android:layout_marginTop="-15dp"
            android:scaleType="fitXY"
            android:src="@mipmap/image_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.speed.domain.catlifevpn.custom.MediumText
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/great"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageRate" />

        <com.speed.domain.catlifevpn.custom.MediumText
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/rate_hint"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <com.speed.domain.catlifevpn.custom.RatingStarView
            android:id="@+id/ratingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <TextView
            android:id="@+id/btnFeedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/btn_blue20"
            android:gravity="center"
            android:text="@string/setting_Feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toBottomOf="@+id/ratingView" />

        <TextView
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_80"
            android:background="@drawable/btn_gray20"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFeedback" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>